--- a/src/scss/layouts.scss
+++ b/src/scss/layouts.scss
@@ -15,6 +15,8 @@ $hh: 34px;
 
 		> .top {
 
+			white-space: pre;
+
 			> .name {
 				font-weight: bold;
 			}
